# workflow

./: .buildinfo  .gitignore  README.md  code_structure.configset.html  code_structure.html  code_structure.parallelisation.html  command_line.automatic_docs.html  command_line.html  complete_pytest  complete_pytest.tin  contributing.html  examples.autopara.html  examples.buildcell.html  examples.contributions.html  examples.daisy_chain_mlip_fitting.html  examples.daisy_chain_mlip_fitting.ipynb  examples.dimers.html  examples.fhiaims_calculator.html  examples.html  examples.index.html  examples.mace.html  examples.md.html  examples.mlip_fitting.html  examples.normal_modes.html  examples.orca.html  examples.orca_cli.html  examples.orca_python.html  examples.select_fps.html  examples.select_fps.ipynb  examples.smiles.html  first_example.html  genindex.html  index.html  install.html  local_pytest.wst  modules.html  objects.inv  operations.ace_fitting.html  operations.calculators.html  operations.descriptors.html  (+50 more)
_sources/: code_structure.parallelisation.rst.txt  code_structure.rst.txt  examples.autopara.md.txt  examples.buildcell.ipynb  examples.buildcell.ipynb.txt  examples.daisy_chain_mlip_fitting.ipynb  examples.dimers.ipynb.txt  examples.fhiaims_calculator.ipynb  examples.index.md  examples.index.md.txt  examples.mace.md.txt  examples.md.md.txt  examples.mlip_fitting.md  examples.normal_modes.md  examples.normal_modes.md.txt  examples.orca_python.md.txt  examples.rst  examples.rst.txt  examples.select_fps.ipynb  first_example.md  first_example.md.txt  index.rst.txt  (+37 more)
(+459 files in other folders)
